--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,15 @@
 <html>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-alpha1/html2canvas.js"></script>
   <style>
+    html, body{
+      height: 100%;
+      margin:0;
+    }
     canvas{
       background-color: black;
+      height: 100%;
+      width: 100%;
+      margin:0;
     }
   </style>
   <body>
